--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include ':samples:svg'
 include ':integration'
 include ':integration:volley'
 include ':integration:okhttp'
+include ':integration:palette'
 
 rootProject.name = 'glide-parent'
